# zhong-project

./: CMakeLists.txt  README.md  display_image  hi.cpp
src/: main.cpp  (+1 more)
task/task1/: CMakeLists.txt
task/task1/src/: main.cpp
template_matching/: CMakeLists.txt
template_matching/.history/: hello_20240803191159.cpp  hello_20240803191203.cpp  hello_20240803201258.cpp  hello_20240803201303.cpp  hello_20240803201307.cpp  hello_20240803201312.cpp  hello_20240803201315.cpp  hello_20240803201936.cpp  num_match_20240803003307.cpp  num_match_20240803004219.cpp  num_match_20240803004221.cpp  num_match_20240803004231.cpp  num_match_20240803004301.cpp  num_match_20240803004305.cpp  num_match_20240803004331.cpp  num_match_20240803004334.cpp  num_match_20240803004341.cpp  num_match_20240803004343.cpp  num_match_20240803004356.cpp  num_match_20240803004400.cpp  num_match_20240803004405.cpp  num_match_20240803004415.cpp  num_match_20240803004423.cpp  num_match_20240803004426.cpp  num_match_20240803004430.cpp  num_match_20240803004433.cpp  num_match_20240803004435.cpp  num_match_20240803004437.cpp  num_match_20240803004445.cpp  num_match_20240803004447.cpp  num_match_20240803004450.cpp  num_match_20240803004452.cpp  num_match_20240803004453.cpp  num_match_20240803004501.cpp  num_match_20240803004503.cpp  num_match_20240803004521.cpp  num_match_20240803004523.cpp  num_match_20240803004525.cpp  num_match_20240803004528.cpp  num_match_20240803004600.cpp  (+49 more)
template_matching/.history/src/: num_match_20240803205612.cpp  num_match_20240803205615.cpp  (+507 more)
template_matching/src/: num_match.cpp
(+4 files in other folders)
